Fix on safari

--- a/app/css/carousel.css
+++ b/app/css/carousel.css
@@ -6,6 +6,7 @@
 
 #carousel .carousel-item {
 	overflow-x: hidden;
+	height: 100%;
 }
 
 #carousel p {
